Revision history for {{$dist->name}}

{{$NEXT}}

6.013     2019-04-30 07:35:49-04:00 America/New_York (TRIAL RELEASE)
        - when SPDX metadata is available for the chosen license,
          x_spdx_expression is added to the dist metadata by default
          (thanks, Leon Timmermans!)

6.012     2018-04-21 10:20:21+02:00 Europe/Oslo
        - revert addition of Archive::Tar::Wrapper as a mandatory prereq (in
          release 6.011).
        - require a version of Config::MVP that adds the cwd back to @INC
        - record the perl version being used into META file
        - tiny fix to help output for "dzil new"

6.011     2018-02-11 12:57:02-05:00 America/New_York
        - stashes can now be added in [%Stash] form from a bundle (thanks,
          Karen Etheridge)
        - use $V env var as an override, when set, in [AutoVersion]
          (thanks, Karen Etheridge)
        - all remaining uses of Class::Load are replaced with Module::Runtime
          (thanks, Karen Etheridge)

6.010     2017-07-10 09:22:16-04:00 America/New_York
        - a few documentation improvements (thanks, Chase Whitener, Mary
          Ehlers, and Jonas B. Nielsen)
        - improve behavior under a noninteractive terminal
        - empty file finders should now consistently return []

6.009     2017-03-04 11:16:37-05:00 America/New_York
        - update DateTime::TimeZone prereq on Win32 to improve workingness
          (thanks, Schwern!)
        - add --recommends and --requires and --suggests to listdeps
        - improve testing of listdeps (thanks, Mickey Nasriachi!)
        - Module::Runtime is now considered 'internal' for the purpose of
          carping (thanks, Karen Etheridge!)
        - ./tmp is now pruned by PruneCruft (thanks, Karen Etheridge!)
        - authordeps now picks up :version for the root section (thanks,
          Karen!)
        - the config loading of the "perl" config loader is more reliable, but
          still please don't use it (thanks, Karen!)